- Fixed bug #47481 (natcasesort() does not sort extended ASCII characters correctly)